--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(lab2 C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(lab2 main.c)
+add_executable(lab2 main.c
+        vector.c
+        vector.h
+)
